apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@import '../../../assets/styles/themes/dark/common/shared';
.search-person {
  color: @color-black-00;
  margin: 57px 40px;
  &__list {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    grid-row-gap: 24px;
    margin: 60px 40px;
  }
  &__item {
    display: flex;
    justify-content: center;
    margin-bottom: 40px;
  }
  &__list-empty {
    display: flex;
    font-size: 24px;
    color: @color-gray-1b;
    margin-top: 80px;
    justify-content: center;
  }
  &__card {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 360px;
    height: 450px;
    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25),
      1px -1px 8px rgba(0, 0, 0, 0.25);
    border-radius: 16px;
    background: @color-black-00;
  }
  &__search {
    display: flex;
    flex-direction: row;
    margin: 20px 0 0 40px;
  }
  &__search-person__field {
    width: 30%;
    height: 48px;
    position: relative;
  }
  &__search-person__field-icon {
    position: absolute;
    background: url('../../../assets/images/search.svg') no-repeat left;
  }
  &__input {
    display: flex;

    background-color: @color-white-ff;
    background-position: 19px;
    border: 2px solid @color-gray-42;
    box-sizing: border-box;
    border-radius: 24px;
    font-size: 18px;
    padding-left: 48px;
    margin-right: 24px;
  }
  &__button {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0px 16px;
    width: 112px;
    height: 48px;
    background: @color-green-69;
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
    border-radius: 24px;
    font-size: 16px;
    line-height: 18px;
    border: 0;
    color: @color-black-00;
    cursor: pointer;
    &:hover {
      background: @color-green-04;
      color: @color-white-ff;
    }
  }
}
@media only screen and (max-width: 1240px) {
  .search-person {
    &__list {
      display: grid;
      grid-template-columns: 1fr 1fr;
    }
  }
}
@media only screen and (max-width: 820px) {
  .search-person {
    &__list {
      display: grid;
      grid-template-columns: 1fr;

      &._empty {
        display: flex;
        font-size: 16px;
      }
    }

    &__search {
      &._input {
        width: 70%;
        height: 36px;
        margin-right: 16px;
        padding-left: 16%;
      }

      &._button {
        width: 100px;
        height: 36px;
      }
    }
  }
}

